last changes on the spacing and fixed the error

--- a/src/App.css
+++ b/src/App.css
@@ -51,8 +51,8 @@ header{
     background-image: url("./images/bg-pattern-card.svg");
     display: flex;
     justify-content: center;
-    border-top-right-radius: 20px;
-    border-top-left-radius: 20px;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
     position: relative;
     overflow: visible;
 }
@@ -73,8 +73,8 @@ main{
     background-color: white;
     width: 100%;
     height: 100%;
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
 .profile-title{
     display: flex;
@@ -130,5 +130,6 @@ em{
     color: var(--title-color);
 }
 .numbers > em {
-    font-size: 0.8rem;
+    font-size: 0.7rem;
+    letter-spacing: 0.8px;
 }
